<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="25dp"
    android:isScrollContainer="false"
    android:orientation="vertical"
    tools:context=".EditTodoFragment">

    <EditText
        android:id="@+id/edit_fragment_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_title"
        android:inputType="textPersonName"
        android:maxLength="15" />

    <EditText
        android:id="@+id/edit_fragment_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:height="150dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_description"
        android:inputType="textMultiLine|textPersonName"
        android:lines="5"
        android:maxLength="30"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_fragment_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="date" />

    <RadioGroup
        android:id="@+id/edit_fragment_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_fragment_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#15A11A"
            android:fontFamily="@font/francois_one"
            android:text="@string/edit_high"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/edit_fragment_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#7485E6"
            android:fontFamily="@font/francois_one"
            android:text="@string/edit_medium"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/edit_fragment_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#DD9529"
            android:fontFamily="@font/francois_one"
            android:text="@string/edit_low"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_fragment_chk_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/checkbox"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_fragment_btn_save"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#5A9CD1"
            android:fontFamily="@font/cantora_one"
            android:text="@string/edit_save"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/edit_fragment_btn_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#E44545"
            android:fontFamily="@font/cantora_one"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>