<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/list_item_tv_title"
        android:layout_width="316dp"
        android:layout_height="77dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:text="@string/textviewtitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_item_tv_date"
        android:layout_width="125dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:layout_weight=".25"
        android:width="20dp"
        android:paddingBottom="10dp"
        android:text="@string/textviewdate"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="242dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:text="@string/checkText"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/description"
        android:layout_width="285dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:text="@string/description_todo"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp" />
</LinearLayout>